docs/process/v4_1/phase_6b/v3/zero_trust_gate_summary_v1.md
# Phase 6B v3 Zero-Trust Gate Summary v1

Status: READY
mechanical_audit_status: PASS
final_status: READY_FOR_MANUAL_REVIEW

## Current Final State Summary

Source components: 15
Sub-surfaces: 102
Seeds: 102
Dependency edges: 451
Extraction edges: 451
Extraction edge distribution: hard_dependency=443 / deferred_with_reason=0 / conditional_dependency=0 / manual_review_required=8
Top-level seed dependency references: 443
Root seeds: 0
Current root seeds: []

## v3 Repair Summary

manifest_required distribution: {"true":84,"false":18}
service_manifest_contract dependency count: 84
foundry_activation distribution: {"true":83,"false":19}
seed-local dependency parity: PASS
ADL-021 consistency: PASS
ADL-004 consistency: PASS
pricing manual-review consistency: PASS
dependency extraction to seed dependency parity: PASS
fidelity self-attestation: 0
report summary consistency: PASS

No ticket packs, predictive stop analysis, autonomous readiness, execution prompt, or execution artifact was created.

Result: PHASE_6B_V3_SEMANTIC_REPAIR_READY_FOR_MANUAL_REVIEW
