docs/process/v4_1/phase_6b/v4/zero_trust_gate_summary_v1.md
# Phase 6B v4 Zero-Trust Gate Summary v1

Status: READY
mechanical_audit_status: PASS
final_status: READY_FOR_MANUAL_REVIEW

## Current Final State Summary

Source components: 15
Sub-surfaces: 102
Seeds: 102
Dependency edges: 451
Extraction edges: 451
Extraction edge distribution: hard_dependency=443 / deferred_with_reason=0 / conditional_dependency=0 / manual_review_required=8
Top-level seed dependency references: 443
Root seeds: 0
Current root seeds: []

## v4 Repair Summary

root_cleanup_result: PASS
communication_channel_seed_type_distribution_before: {"tenant_service":9,"evidence_primitive":1}
communication_channel_seed_type_distribution_after: {"optional_microservice":9,"evidence_primitive":1}
manifest_distribution: {"true":84,"false":18}
service_manifest_dependency_count: 84
foundry_activation_distribution: {"true":83,"false":19}
seed_type_distribution: {"tenant_service":57,"internal_lifecycle_primitive":3,"configuration_extension":8,"core_microservice":11,"evidence_primitive":5,"audit_log_primitive":2,"optional_microservice":9,"provider_adapter":7}
seed_adl_distribution: {"none":85,"ADL-015":2,"ADL-013":2,"ADL-021":1,"ADL-004":8,"ADL-014":1,"ADL-016":2,"ADL-018":1}
edge_adl_distribution: {"none":443,"ADL-021":1,"ADL-004":7}
seed-local_dependency_parity: PASS
service_manifest_behavioral_adl_edges: 0
ADL-021 consistency: PASS
ADL-004 consistency: PASS
dependency extraction to seed dependency parity: PASS
fidelity self-attestation: 0
report summary consistency: PASS

No ticket packs, predictive stop analysis, autonomous readiness, execution prompt, or execution artifact was created.

Result: PHASE_6B_V4_SEMANTIC_REPAIR_READY_FOR_MANUAL_REVIEW
